sigo haciendo algunos ejercicios de practica

--- a/clase01/blog.html
+++ b/clase01/blog.html
@@ -20,8 +20,19 @@
     </section>
     <section class="texto">
       <p>Por María Eugenia Costa. Publicado hace 3 días</p>
+      <p>Bienvenidos a las practicas que voy a estar realizando junto a <strong>Ada</strong> en el curso <strong>Introduccion a Front End</strong>.</p>
+      <p>¿Qué tecnologías y herramientas estaré viendo?
+        <ul>
+          <li>HTML5</li>
+          <li>CSS3</li>
+          <li>SASS</li>
+          <li>JavaScript</li>
+          <li>Git</li>
+        </ul>
+      </p>
+      <p>Como esta es la primer clase solo vimos HTML5, pero...mi genio me gano y aplique un poco de CSS.</p>
+      <p>Espero les guste lo que ven.</p>
     </section>
-
   </main>
   <!-- FOOTER-->
   <footer>
