--- a/clase01/diario-personal.html
+++ b/clase01/diario-personal.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Clase 1 | Diario</title>
-    <!-- CSS GENERAL-->
-    <link rel="stylesheet" href="../styles/main.css">
+  <!-- CSS GENERAL-->
+  <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
     <!-- HEADER-->
@@ -20,24 +20,31 @@
       </section>
       <section class="lunes">
         <h2>Lunes</h2>
+        <p>Comienza la semana y aprovecho para hacer algunas compras de frutas y verduras ¿qué cocinaremos?</p>
       </section>
       <section class="martes">
         <h2>Martes</h2>
+        <p>Hoy toco volver a viajar en cole y subte para ir por primera vez a la oficina, nso estamos preparando para trabajar a full por unas semanas.</p>
       </section>
       <section class="miercoles">
         <h2>Miercoles</h2>
+        <p>Hoy toca visita al veterinario para operar a Pety.</p>
       </section>
       <section class="jueves">
         <h2>Jueves</h2>
+        <p>Primer día post operatorio, agradecida de trabajar <i>Home office</i> para poder ir cuidando y viendo la mejoría de Pety.</p>
       </section>
       <section class="viernes">
         <h2>Viernes</h2>
+        <p>Llegó el viernes y cocinamos pizzas caseras.</p>
       </section>
       <section class="sabado">
         <h2>Sabado</h2>
+        <p>Aprovechando el día soleado nos fuimos a la quinta a disfrutar del aire libre y jardín.</p>
       </section>
       <section class="domingo">
         <h2>Domingo</h2>
+        <p>Empecé a ver unos videos en <i>YouTube</i> de <i>FreeCodeCamp</i> sobre <i>React</i> para comenzar con projectos simples a entender algunos conceptos.</p>
       </section>
     </main>
     <!-- FOOTER-->
