agrego favicones a las webs y completo con la receta del cake de limon

--- a/clase01/diario-personal.html
+++ b/clase01/diario-personal.html
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Clase 1 | Diario</title>
+  <!-- FAVICON -->
+  <link rel="shortcut icon" href="https://img.icons8.com/external-vitaliy-gorbachev-fill-vitaly-gorbachev/60/000000/external-diary-valentines-day-vitaliy-gorbachev-fill-vitaly-gorbachev.png" type="image/x-icon">
   <!-- CSS GENERAL-->
   <link rel="stylesheet" href="../styles/main.css">
 </head>
