--- a/clase01/receta.html
+++ b/clase01/receta.html
@@ -5,8 +5,66 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Receta</title>
+  <!-- FAVICON -->
+  <link rel="shortcut icon" href="https://img.icons8.com/emoji/48/000000/lemon.png" type="image/x-icon">
+  <!-- CSS GENERAL-->
+  <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
-  
+  <!-- HEADER-->
+  <header>
+    <h1>Cake de Limón</h1>
+  </header>
+  <!-- MAIN -->
+  <main>
+    <section class="introduccion">
+      <p>Este cake de limón con glaseado blanco es delicioso, es de los bizcochos más ricos que probé. Un sabor a limón intenso, ácido y dulce a la vez, una textura jugosa buenísima.</p>
+      <p>La masa se hace en Thermomix super fácil y lleva combinación de harina de trigo y de maicena, y me ha encantado el toque que le da, ralladura de limón, azúcar, leche, zumo de limón... muy rico.</p>
+      <p>El bizcocho solo ya esta buenísimo pero si quieres darle un toque más especial, prueba a ponerle el glaseado blanco que haremos con azúcar y zumo de limón y echándolo encima cuando el bizcocho está templado, queda como una costra crujiente deliciosa que combina genial con el bizcocho y le aporta un punto más de sabor a limón.</p>
+      <img src="../assets/images/cake-limon.jpg" alt="cake de limon, receta de Thermomix">
+    </section>
+    <section class="ingredientes">
+      <p><strong>Tiempo de preparacion:</strong>15 minutos</p>
+      <p><strong>Tiempo total:</strong>1hora 15 minutos</p>
+      <p><strong>Raciones:</strong>8</p>
+      <h2>Ingredientes</h2>
+      <p>Cake de limón</p>
+      <ul>
+        <li>200 gr de Harina de repostería</li>
+        <li>100 gr de Maicena</li>
+        <li>1 Sobre de levadura química en polvo</li>
+        <li>200 gr de Azúcar</li>
+        <li>4-6 Tiras de piel de limón (sin nada de parte blanca) bien seca</li>
+        <li>3 huevos</li>
+        <li>160 gr de Mantequilla en trozos pequeños</li>
+        <li>120 gr de Leche</li>
+        <li>40 gr de Zumo de limón</li>
+      </ul>
+      <p>Glaseado de limón</p>
+      <ul>
+        <li>200 gr de Azúcar</li>
+        <li>40 gr de Zumo de limón</li>
+      </ul>
+    </section>
+    <section class="instrucciones">
+      <h2>Instrucciones</h2>
+      <ol>
+        <li>Precaliente el horno a 180°C. Forre con papel de hornear un molde de cake de 1 litro de capacidad.</li>
+        <li>Ponga en el vaso la harina, la maicena y la levadura y mezcle 10 seg/vel 5. Vierta en un bol y reserve.</li>
+        <li>Ponga en el vaso el azúcar y la piel de limón y pulverice 30 seg/vel 10. Con la espátula, baje los ingredientes hacia el fondo del vaso.</li>
+        <li>Incorpore los huevos y mezcle 3 min/37°C/vel 3.</li>
+        <li>Añada la mantequilla y bata 3 min/vel 3.</li>
+        <li>Agregue la leche y el zumo de limón y mezcle 10 seg/vel 2. Después, retire el cubilete y programe 2 min/vel 2. Mientras tanto, vaya añadiendo la mezcla de harina, maicena y levadura por la abertura. Termine de mezclar con la espátula y vierta la mezcla en el molde preparado.</li>
+        <li>Hornee durante 40-50 minutos (180°C). Retire del horno y deje templar 10-15 minutos. Lave y seque perfectamente el vaso y la tapa.</li>
+        <li>Ponga el azúcar y pulverice 30 seg/vel 10.</li>
+        <li>Añada el zumo de limón y mezcle 10 seg/vel 3. Con la espátula, baje los ingredientes hacia el fondo del vaso y mezcle 10 seg/vel 5.</li>
+        <li>Desmolde el bizcocho sobre una rejilla y, estando templado, vierta encima el glaseado. Sirva templado o frío.</li>
+      </ol>
+    </section>
+  </main>
+  <!-- FOOTER-->
+  <footer>
+    <p>Practica realizada por <a href="http://www.linkedin.com/in/maríaeugeniacosta" target="_blank" rel="noopener noreferrer">María Eugenia Costa</a> para el curso <strong>Introduccion Front End</strong> en <img src="../assets/images/ada_logo_blanco.png" alt="Logo de Ada"></p>
+  </footer>
 </body>
 </html>
