--- a/clase01/enciclopedia.html
+++ b/clase01/enciclopedia.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Enciclopedia</title>
+  <title>CLase 1 | Enciclopedia</title>
+  <!-- FAVICON -->
+  <link rel="shortcut icon" href="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/64/000000/external-encyclopaedia-literature-flaticons-lineal-color-flat-icons-2.png" type="image/x-icon">
   <!-- CSS GENERAL-->
   <link rel="stylesheet" href="../styles/main.css">
 </head>
