--- a/clase01/playlist.html
+++ b/clase01/playlist.html
@@ -4,9 +4,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>playlist</title>
+  <title>Clase 1 |Playlist</title>
+  <!-- FAVICON -->
+  <link rel="shortcut icon" href="https://img.icons8.com/ios-glyphs/30/000000/musical-notes.png" type="image/x-icon">
+  <!-- CSS GENERAL-->
+  <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
-  
+  <!-- HEADER-->
+  <header>
+    <h1>Playlist</h1>
+  </header>
+  <!-- MAIN -->
+  <main>
+
+  </main>
+  <!-- FOOTER-->
+  <footer>
+    <p>Practica realizada por <a href="http://www.linkedin.com/in/maríaeugeniacosta" target="_blank" rel="noopener noreferrer">María Eugenia Costa</a> para el curso <strong>Introduccion Front End</strong> en <img src="../assets/images/ada_logo_blanco.png" alt="Logo de Ada"></p>
+  </footer>
 </body>
 </html>
