le doy estilos a la practica de playlist

--- a/clase01/playlist.html
+++ b/clase01/playlist.html
@@ -4,19 +4,85 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Clase 1 |Playlist</title>
+  <title>Clase 1 | Playlist</title>
+  <meta name="description"
+  content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS">
+  <link rel="apple-touch-icon" href="https://img.icons8.com/ios-glyphs/30/000000/musical-notes.png">
+  <meta name="theme-color" content="rgb(232, 229, 132)">
+  <meta name="twitter:card" content="summary">
+  <meta property="og:type" content="website">
+  <meta property="og:title" name="twitter:title" content="Clase 1 | Playlist">
+  <meta property="og:description" name="twitter:description"
+    content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS">
+  <meta property="og:image" name="twitter:image"
+    content="https://eugenia1984.github.io/portafolio-fs/img/hero-image-home.jpg">
+  <meta property="og:url" name="twitter:url"
+    content="https://eugenia1984.github.io/ada-introduccion-frontend/clase01/index.html">
   <!-- FAVICON -->
-  <link rel="shortcut icon" href="https://img.icons8.com/ios-glyphs/30/000000/musical-notes.png" type="image/x-icon">
+  <link rel="favicon" href="https://img.icons8.com/ios-glyphs/30/000000/musical-notes.png">
   <!-- CSS GENERAL-->
   <link rel="stylesheet" href="../styles/main.css">
+  <!-- CSS PLAYLIST -->
+  <link rel="stylesheet" href="/styles/playlist.css">
 </head>
 <body>
   <!-- HEADER-->
   <header>
-    <h1>Playlist</h1>
+    <h1>Mis Playlist</h1>
   </header>
   <!-- MAIN -->
   <main>
+    <section class="ochentas">
+      <h2>Éxitos de los 80's</h2>
+      <p>Duración: 123 min.</p>
+      <p><span>#ataqueochentoso</span><span>#80s</span></p>
+      <h3>Canciones</h3>
+      <ol>
+        <li>Where the streets have no name - U2</li>
+        <li>Purple rain - Prince</li>
+        <li>Fall on me - R.E.M.</li>
+        <li>West End girls - Pet Shop Boys</li>
+        <li>Billie Jean - Michael Jackson</li>
+        <li>Never let me down again - Depeche Mode</li>
+        <li>Blue Monday - New Order</li>
+        <li>This charming man - The Smiths</li>
+        <li>Pictures of you - The Cure</li>
+      </ol>
+    </section>
+    <section class="noventas">
+      <h2>Éxitos de los 90's</h2>
+      <p>Duración: 1h 90 min.</p>
+      <span>#noventas</span><span>#pop</span><span>90s</span>
+      <h3>Canciones</h3>
+      <ol>
+        <li>I Want It That Way - BackStreersBoys</li>
+        <li>Bitter Sweet Symphony - The Verve</li>
+        <li>Baby One More Time - Britney Spears</li>
+        <li>Believe - Cher</li>
+        <li>Don't Speak - No Doubt</li>
+        <li>Killing Me Softly - The Fuugees</li>
+        <li>Linger - The Cranberries</li>
+        <li>Vogue - Madonna </li>
+        <li>Alive - Pearl Jam</li>
+        <li>Torn - Natalie Imbruglia</li>
+        <li>I Will Always Love You - Whitney Houston</li>
+        <li>Wonderwall - Oasis</li>
+      </ol>
+    </section>
+    <section class="chill-out">
+      <h2>Éxitos Chill out</h2>
+      <p>Duración: 120 min.</p>
+      <p><span>#chill-out</span><span>relax</span></p>
+      <h3>Canciones</h3>
+      <ol>
+        <li>Fly Me to the Moon - GRoove Armada</li>
+        <li>Teardrop - Massive Attack</li>
+        <li>Lebanese Blode - Thievery Corporation</li>
+        <li>Sexy boy - Air</li>
+        <li>In the waiting line - Zero</li>
+        <li>Playas de barbate - Chambao</li>
+      </ol>
+    </section>
 
   </main>
   <!-- FOOTER-->
