completo los meta descriptions

--- a/clase01/enciclopedia.html
+++ b/clase01/enciclopedia.html
@@ -5,6 +5,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CLase 1 | Enciclopedia</title>
+  <meta name="description"
+  content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. En esta practica realice una enciclopedia sobre Ada Lovelace.">
+  <link rel="apple-touch-icon" href="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/64/000000/external-encyclopaedia-literature-flaticons-lineal-color-flat-icons-2.png">
+  <meta name="theme-color" content="rgb(232, 229, 132)">
+  <meta name="twitter:card" content="summary">
+  <meta property="og:type" content="website">
+  <meta property="og:title" name="twitter:title" content="Clase 1 | Enciclopedia ">
+  <meta property="og:description" name="twitter:description"
+    content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. En esta practica realice una enciclopedia sobre Ada Lovelace.">
+  <meta property="og:image" name="twitter:image"
+    content="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/64/000000/external-encyclopaedia-literature-flaticons-lineal-color-flat-icons-2.png">
+  <meta property="og:url" name="twitter:url"
+    content="https://eugenia1984.github.io/ada-introduccion-frontend/clase01/enciclopedia.html">
   <!-- FAVICON -->
   <link rel="shortcut icon" href="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/64/000000/external-encyclopaedia-literature-flaticons-lineal-color-flat-icons-2.png" type="image/x-icon">
   <!-- CSS GENERAL-->
