--- a/clase01/playlist.html
+++ b/clase01/playlist.html
@@ -15,11 +15,11 @@
   <meta property="og:description" name="twitter:description"
     content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS">
   <meta property="og:image" name="twitter:image"
-    content="https://eugenia1984.github.io/portafolio-fs/img/hero-image-home.jpg">
+    content="https://img.icons8.com/ios-glyphs/30/000000/musical-notes.png">
   <meta property="og:url" name="twitter:url"
-    content="https://eugenia1984.github.io/ada-introduccion-frontend/clase01/index.html">
+    content="https://eugenia1984.github.io/ada-introduccion-frontend/clase01/playlist.html">
   <!-- FAVICON -->
-  <link rel="favicon" href="https://img.icons8.com/ios-glyphs/30/000000/musical-notes.png">
+  <link rel="shortcut icon" href="https://img.icons8.com/ios-glyphs/30/000000/musical-notes.png" type="image/x-icon">
   <!-- CSS GENERAL-->
   <link rel="stylesheet" href="../styles/main.css">
   <!-- CSS PLAYLIST -->
