--- a/clase01/receta.html
+++ b/clase01/receta.html
@@ -4,11 +4,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Receta</title>
+  <title>Clase 1 | Receta</title>
+  <meta name="description"
+  content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Les muestro la receta del cake de limon con Thermomix">
+  <link rel="apple-touch-icon" href="https://img.icons8.com/emoji/48/000000/lemon.png">
+  <meta name="theme-color" content="rgb(232, 229, 132)">
+  <meta name="twitter:card" content="summary">
+  <meta property="og:type" content="website">
+  <meta property="og:title" name="twitter:title" content="Clase 1 | Receta">
+  <meta property="og:description" name="twitter:description"
+    content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Les muestro la receta del cake de limon con Thermomix">
+  <meta property="og:image" name="twitter:image"
+    content="https://img.icons8.com/emoji/48/000000/lemon.png">
+  <meta property="og:url" name="twitter:url"
+    content="https://eugenia1984.github.io/ada-introduccion-frontend/clase01/receta.html">
   <!-- FAVICON -->
   <link rel="shortcut icon" href="https://img.icons8.com/emoji/48/000000/lemon.png" type="image/x-icon">
   <!-- CSS GENERAL-->
   <link rel="stylesheet" href="../styles/main.css">
+  <!--CSS RECETA -->
+  <link rel="stylesheet" href="../styles/receta.css">
 </head>
 <body>
   <!-- HEADER-->
@@ -23,6 +38,7 @@
       <p>El bizcocho solo ya esta buenísimo pero si quieres darle un toque más especial, prueba a ponerle el glaseado blanco que haremos con azúcar y zumo de limón y echándolo encima cuando el bizcocho está templado, queda como una costra crujiente deliciosa que combina genial con el bizcocho y le aporta un punto más de sabor a limón.</p>
       <img src="../assets/images/cake-limon.jpg" alt="cake de limon, receta de Thermomix">
     </section>
+   <section class="preparacion">
     <section class="ingredientes">
       <p><strong>Tiempo de preparacion:</strong>15 minutos</p>
       <p><strong>Tiempo total:</strong>1hora 15 minutos</p>
@@ -61,6 +77,7 @@
         <li>Desmolde el bizcocho sobre una rejilla y, estando templado, vierta encima el glaseado. Sirva templado o frío.</li>
       </ol>
     </section>
+   </section>
   </main>
   <!-- FOOTER-->
   <footer>
