--- a/clase01/blog.html
+++ b/clase01/blog.html
@@ -5,6 +5,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Clase 1 | Blog</title>
+  <meta name="description"
+  content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. En esta practica realice un mini blog.">
+  <link rel="apple-touch-icon" href="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-blog-digital-marketing-flatart-icons-outline-flatarticons-1.png">
+  <meta name="theme-color" content="rgb(232, 229, 132)">
+  <meta name="twitter:card" content="summary">
+  <meta property="og:type" content="website">
+  <meta property="og:title" name="twitter:title" content="Clase 1 | Blog ">
+  <meta property="og:description" name="twitter:description"
+    content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. En esta practica realice un mini blog.">
+  <meta property="og:image" name="twitter:image"
+    content="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-blog-digital-marketing-flatart-icons-outline-flatarticons-1.png">
+  <meta property="og:url" name="twitter:url"
+    content="https://eugenia1984.github.io/ada-introduccion-frontend/clase01/blog.html">
   <!-- FAVION -->
   <link rel="shortcut icon" href="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-blog-digital-marketing-flatart-icons-outline-flatarticons-1.png" type="image/x-icon">
   <!-- CSS GENERAL-->
