--- a/clase01/index.html
+++ b/clase01/index.html
@@ -5,10 +5,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Clase 1</title>
+  <meta name="description"
+  content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la primer clase.">
+  <link rel="apple-touch-icon" href="https://img.icons8.com/external-becris-lineal-color-becris/64/000000/external-programming-data-science-becris-lineal-color-becris.png">
+  <meta name="theme-color" content="rgb(232, 229, 132)">
+  <meta name="twitter:card" content="summary">
+  <meta property="og:type" content="website">
+  <meta property="og:title" name="twitter:title" content="Clase 1">
+  <meta property="og:description" name="twitter:description"
+    content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la primer clase.">
+  <meta property="og:image" name="twitter:image"
+    content="https://img.icons8.com/external-becris-lineal-color-becris/64/000000/external-programming-data-science-becris-lineal-color-becris.png">
+  <meta property="og:url" name="twitter:url"
+    content="https://eugenia1984.github.io/ada-introduccion-frontend/clase01/index.html">
   <!-- FAVICON -->
   <link rel="shortcut icon" href="https://img.icons8.com/external-becris-lineal-color-becris/64/000000/external-programming-data-science-becris-lineal-color-becris.png" type="image/x-icon">
   <!-- CSS GENERAL-->
   <link rel="stylesheet" href="../styles/main.css">
+  <!-- CSS INDEX-->
+  <link rel="stylesheet" href="../styles/index.css">
 </head>
 <body>
   <!-- HEADER-->
