agrego al hoja de estilo para blog y le termino de dar unaos estilos

--- a/clase01/blog.html
+++ b/clase01/blog.html
@@ -22,11 +22,13 @@
   <link rel="shortcut icon" href="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-blog-digital-marketing-flatart-icons-outline-flatarticons-1.png" type="image/x-icon">
   <!-- CSS GENERAL-->
   <link rel="stylesheet" href="../styles/main.css">
+  <!-- CSS BLOG -->
+  <link rel="stylesheet" href="../styles/blog.css">
 </head>
 <body>
   <!-- HEADER-->
   <header>
-    <h2>Primer clase de Introducción Front End * Blog *</h2>
+    <h2>Primer clase de Introducción Front End: Blog</h2>
   </header>
   <!-- MAIN -->
   <main>
@@ -34,8 +36,9 @@
       <h1>El mejor artículo del mundo</h1>
     </section>
     <section class="texto">
-      <p>Por María Eugenia Costa. Publicado hace 3 días</p>
+      <p>Por María Eugenia Costa. <br>Publicado hace 3 días</p>
       <p>Bienvenidos a las practicas que voy a estar realizando junto a <strong>Ada</strong> en el curso <strong>Introduccion a Front End</strong>.</p>
+      <hr>
       <p>¿Qué tecnologías y herramientas estaré viendo?
         <ul>
           <li>HTML5</li>
@@ -45,8 +48,9 @@
           <li>Git</li>
         </ul>
       </p>
-      <p>Como esta es la primer clase solo vimos HTML5, pero...mi genio me gano y aplique un poco de CSS.</p>
-      <p>Espero les guste lo que ven.</p>
+      <hr>
+      <p>➡ Como esta es la primer clase solo vimos HTML5, pero...mi genio me gano y aplique un poco de CSS.</p>
+      <p>Espero les guste lo que ven 😎</p>
     </section>
   </main>
   <!-- FOOTER-->
