--- a/clase01/diario-personal.html
+++ b/clase01/diario-personal.html
@@ -22,11 +22,13 @@
   <link rel="shortcut icon" href="https://img.icons8.com/external-vitaliy-gorbachev-fill-vitaly-gorbachev/60/000000/external-diary-valentines-day-vitaliy-gorbachev-fill-vitaly-gorbachev.png" type="image/x-icon">
   <!-- CSS GENERAL-->
   <link rel="stylesheet" href="../styles/main.css">
+  <!-- CSS DIARIOS-->
+  <link rel="stylesheet" href="../styles/diario.css">
 </head>
 <body>
     <!-- HEADER-->
     <header>
-      <h2>Primer clase de Introducción Front End</h2>
+      <h2>Primer clase de Introducción Front End: Mi diario personal</h2>
     </header>
     <!-- MAIN -->
     <main>
