--- a/clase01/receta.html
+++ b/clase01/receta.html
@@ -44,7 +44,7 @@
       <p><strong>Tiempo total:</strong>1hora 15 minutos</p>
       <p><strong>Raciones:</strong>8</p>
       <h2>Ingredientes</h2>
-      <p>Cake de limón</p>
+      <p><strong>Cake de limón</strong></p>
       <ul>
         <li>200 gr de Harina de repostería</li>
         <li>100 gr de Maicena</li>
@@ -56,7 +56,7 @@
         <li>120 gr de Leche</li>
         <li>40 gr de Zumo de limón</li>
       </ul>
-      <p>Glaseado de limón</p>
+      <p><strong>Glaseado de limón</strong></p>
       <ul>
         <li>200 gr de Azúcar</li>
         <li>40 gr de Zumo de limón</li>
