--- a/clase01/index.html
+++ b/clase01/index.html
@@ -23,7 +23,7 @@
   <!-- CSS GENERAL-->
   <link rel="stylesheet" href="../styles/main.css">
   <!-- CSS INDEX-->
-  <link rel="stylesheet" href="../styles/index.css">
+  <link rel="stylesheet" href="../styles/index-clase1.css">
 </head>
 <body>
   <!-- HEADER-->
