corrijo la ruta al style del¡ la practica de la lista de canciones que no tomaba el css

--- a/clase01/playlist.html
+++ b/clase01/playlist.html
@@ -23,7 +23,7 @@
   <!-- CSS GENERAL-->
   <link rel="stylesheet" href="../styles/main.css">
   <!-- CSS PLAYLIST -->
-  <link rel="stylesheet" href="/styles/playlist.css">
+  <link rel="stylesheet" href="../styles/playlist.css">
 </head>
 <body>
   <!-- HEADER-->
