voy agregando los esqueletos de los index para las practicas

--- a/clase02/paleta-de-colores.html
+++ b/clase02/paleta-de-colores.html
@@ -26,7 +26,7 @@
 <body>
   <!-- HEADER-->
   <header>
-    <h1>Paleta de colores</h1>
+    <h1>Mis paletas</h1>
   </header>
   <!-- MAIN -->
   <main>
