--- a/clase02/termometro.html
+++ b/clase02/termometro.html
@@ -4,20 +4,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Clase 2 | Mi cuenta</title>
+  <title>Clase 2 | Termometro</title>
   <meta name="description"
-  content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la segunda clase, en este caso mi cuenta bancaria.">
+  content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la segunda clase, en este caso iun termometro.">
   <link rel="apple-touch-icon" href="https://img.icons8.com/external-becris-lineal-color-becris/64/000000/external-programming-data-science-becris-lineal-color-becris.png">
   <meta name="theme-color" content="rgb(232, 229, 132)">
   <meta name="twitter:card" content="summary">
   <meta property="og:type" content="website">
-  <meta property="og:title" name="twitter:title" content="Clase2 | Mi cuenta">
+  <meta property="og:title" name="twitter:title" content="Clase2 | Termometro">
   <meta property="og:description" name="twitter:description"
-    content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la segunda clase, en este caso mi cuenta bancaria.">
+    content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la segunda clase, en este caso iun termometro.">
   <meta property="og:image" name="twitter:image"
     content="https://img.icons8.com/ios/50/000000/laptop-coding.png">
   <meta property="og:url" name="twitter:url"
-    content="https://eugenia1984.github.io/ada-introduccion-frontend/clase02/cuenta-bancaria.html">
+    content="https://eugenia1984.github.io/ada-introduccion-frontend/clase02/termometro.html">
   <!-- FAVICON -->
   <link rel="shortcut icon" href="https://img.icons8.com/ios/50/000000/laptop-coding.png" type="image/x-icon">
   <!-- CSS GENERAL-->
@@ -26,7 +26,7 @@
 <body>
   <!-- HEADER-->
   <header>
-    <h1>Mi cuenta</h1>
+    <h1>Termometro</h1>
   </header>
   <!-- MAIN -->
   <main>
