comienzo con las practicas de la segunda clase

--- a/clase02/portfolio.html
+++ b/clase02/portfolio.html
@@ -11,7 +11,7 @@
   <meta name="theme-color" content="rgb(232, 229, 132)">
   <meta name="twitter:card" content="summary">
   <meta property="og:type" content="website">
-  <meta property="og:title" name="twitter:title" content="Clase2 | Portfolio">
+  <meta property="og:title" name="twitter:title" content="Clase 2 | Portfolio">
   <meta property="og:description" name="twitter:description"
     content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la segunda clase, en este caso un portafolio.">
   <meta property="og:image" name="twitter:image"
@@ -28,6 +28,13 @@
   <header>
     <h1>María Eugenia Costa</h1>
   </header>
+  <nav>
+    <ul>
+      <li><a href="#">Conocimientos</a></li>
+      <li><a href="#">Experiencia</a></li>
+      <li><a href="#">Contacto</a></li>
+    </ul>
+  </nav>
   <!-- MAIN -->
   <main>
 
