--- a/clase02/temario.html
+++ b/clase02/temario.html
@@ -22,14 +22,76 @@
   <link rel="shortcut icon" href="https://img.icons8.com/ios/50/000000/laptop-coding.png" type="image/x-icon">
   <!-- CSS GENERAL-->
   <link rel="stylesheet" href="../styles/main.css">
+  <!-- CSS TEMARIO-->
+  <link rel="stylesheet" href="../styles/temario.css">
 </head>
 <body>
   <!-- HEADER-->
   <header>
-    <h1>Curso de desarrollo Frontend</h1>
+    <h1 id="presentacion">Curso de desarrollo Frontend</h1>
   </header>
   <!-- MAIN -->
-  <main>
+  <main class="container">
+    <section class="introduccion">
+      <p></p>
+      <nav>
+        <p class="center">Temas a ver:</p>
+        <ol>
+          <li><a href="#html">Introducción a HTML</a></li>
+          <li><a href="#css">Introducción a CSS</a></li>
+          <li><a href="#sass">Introducción a SASS</a></li>
+          <li><a href="#javascript">Introducción a JavaScript</a></li>
+          <li><a href="#react">Introducción a React</a></li>
+        </ol>
+      </nav>
+    </section>
+    <section id="html">
+      <h2>Introducción a HTML</h2>
+      <h3>¿Qué es HTML?</h3>
+      <p>HTML significa Lenguaje de Marcado de HiperTexto</p>
+      <p>HTML es el lenguaje de marcado estándar para crear páginas web.</p>
+      <p>HTML describe la estructura de una página Web</p>
+      <p>HTML consta de una serie de elementos</p>
+      <p>Los elementos HTML le dicen al navegador cómo mostrar el contenido</p>
+      <p></p>
+      <p>Los elementos HTML etiquetan piezas de contenido como "este es un encabezado", "este es un párrafo", "este es un enlace", etc.</p>
+      <a href="#presentacion" class="btn"><img src="https://img.icons8.com/color/24/000000/up-squared.png" alt="flecha hacia arriba" />Volver arriba</a>
+    </section>
+    <section id="css">
+      <h2>Introducción a CSS</h2>
+      <h3>¿Qué es CSS?</h3>
+      <p>CSS significa hojas de estilo en cascada</p>
+      <p>CSS describe cómo se deben mostrar los elementos HTML en la pantalla, el papel o en otros medios</p>
+      <p>CSS ahorra mucho trabajo. Puede controlar el diseño de varias páginas web a la vez</p>
+      <p>Las hojas de estilo externas se almacenan en archivos CSS</p>
+      <a href="#presentacion" class="btn"><img src="https://img.icons8.com/color/24/000000/up-squared.png"  alt="flecha hacia arriba"/>Volver arriba</a>
+    </section>
+    <section id="sass">
+      <h2>Introducción a Sass</h2>
+      <h3>CSS con superpoderes</h3>
+      <p>Sass es el lenguaje de extensión CSS de grado profesional más maduro, estable y potente del mundo.</p>
+      <a href="#presentacion" class="btn"><img src="https://img.icons8.com/color/24/000000/up-squared.png"  alt="flecha hacia arriba"/>Volver arriba</a>
+    </section>
+    <section id="javascript">
+      <h2>Introducción a JavaScript</h2>
+      <p>JavaScript es el lenguaje de programación más popular del mundo.</p>
+      <p>JavaScript es el lenguaje de programación de la Web.</p>
+      <p>JavaScript es fácil de aprender.</p>
+      <a href="#presentacion" class="btn"><img src="https://img.icons8.com/color/24/000000/up-squared.png"  alt="flecha hacia arriba"/>Volver arriba</a>
+    </section>
+    <section id="react">
+      <h2>Introducción a React</h2>
+      <h3>Declarativo</h3>
+      <p>React hace que sea sencillo crear interfaces de usuario interactivas. Diseñe vistas simples para cada estado en su aplicación, y React actualizará y renderizará de manera eficiente solo los componentes correctos cuando cambien sus datos.</p>
+      <p>Las vistas declarativas hacen que su código sea más predecible y más fácil de depurar.</p>
+      <h3>Basado en componentes</h3>
+      <p>Cree componentes encapsulados que gestionen su propio estado y luego compóngalos para crear interfaces de usuario complejas.</p>
+      <p>Dado que la lógica del componente está escrita en JavaScript en lugar de plantillas, puede pasar fácilmente datos enriquecidos a través de su aplicación y mantener el estado fuera del DOM.</p>
+      <h3>Aprenda una vez, escriba en cualquier lugar</h3>
+      <p>No hacemos suposiciones sobre el resto de su pila de tecnología, por lo que puede desarrollar nuevas funciones en React sin tener que volver a escribir el código existente.</p>
+      <p>React también puede renderizar en el servidor usando Node y potenciar aplicaciones móviles usando React Native.</p>
+      <a href="#presentacion" class="btn"><img src="https://img.icons8.com/color/24/000000/up-squared.png"  alt="flecha hacia arriba"/>Volver arriba</a>
+    </section>
 
   </main>
 
