--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Practicas Front End</title>
-  <!-- CSS GENERAL -->
-  <link rel="stylesheet" href="./styles/main.css">
+  <title>Practicas Front End | Clase 1 , 2 y 3</title>
+  <meta name="description"
+  content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de las tres primeras clases.">
+  <link rel="apple-touch-icon" href="https://img.icons8.com/external-becris-lineal-color-becris/64/000000/external-programming-data-science-becris-lineal-color-becris.png">
+  <meta name="theme-color" content="rgb(232, 229, 132)">
+  <meta name="twitter:card" content="summary">
+  <meta property="og:type" content="website">
+  <meta property="og:title" name="twitter:title" content="Practicas Front End | Clase 1 , 2 y 3">
+  <meta property="og:description" name="twitter:description"
+    content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de las tres primeras clases.">
+  <meta property="og:image" name="twitter:image"
+    content="https://img.icons8.com/external-becris-lineal-color-becris/64/000000/external-programming-data-science-becris-lineal-color-becris.png">
+  <meta property="og:url" name="twitter:url"
+    content="https://eugenia1984.github.io/ada-introduccion-frontend/index.html">
+  <!-- FAVICON -->
+  <link rel="shortcut icon" href="https://img.icons8.com/external-becris-lineal-color-becris/64/000000/external-programming-data-science-becris-lineal-color-becris.png" type="image/x-icon">
+  <!-- CSS GENERAL-->
+  <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
   <!-- HEADER -->
@@ -20,6 +35,9 @@
     </section>
     <section class="clase2">
       <a href="./clase02/index.html">Clase 2</a>
+    </section>
+    <section class="clase3">
+      <a href="./clase03/index.html">Clase 3</a>
     </section>
   </main>
   <!-- FOOTER -->
