agrego la practica del portafolio

--- a/clase02/experiencia.html
+++ b/clase02/experiencia.html
@@ -4,20 +4,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Clase 2 | Portfolio</title>
+  <title>Clase 2 | Portfolio - Experiencia </title>
   <meta name="description"
-  content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la segunda clase, en este caso un portafolio.">
+  content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la segunda clase, en este caso un portafolio, la seccion Experiencia.">
   <link rel="apple-touch-icon" href="https://img.icons8.com/external-becris-lineal-color-becris/64/000000/external-programming-data-science-becris-lineal-color-becris.png">
   <meta name="theme-color" content="rgb(232, 229, 132)">
   <meta name="twitter:card" content="summary">
   <meta property="og:type" content="website">
-  <meta property="og:title" name="twitter:title" content="Clase 2 | Portfolio">
+  <meta property="og:title" name="twitter:title" content="Clase 2 | Portfolio - Experiencia">
   <meta property="og:description" name="twitter:description"
-    content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la segunda clase, en este caso un portafolio.">
+    content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la segunda clase, en este caso un portafolio, la seccion Experiencia.">
   <meta property="og:image" name="twitter:image"
     content="https://img.icons8.com/ios/50/000000/laptop-coding.png">
   <meta property="og:url" name="twitter:url"
-    content="https://eugenia1984.github.io/ada-introduccion-frontend/clase02/portfolio.html">
+    content="https://eugenia1984.github.io/ada-introduccion-frontend/clase02/experiencia.html">
   <!-- FAVICON -->
   <link rel="shortcut icon" href="https://img.icons8.com/ios/50/000000/laptop-coding.png" type="image/x-icon">
   <!-- CSS GENERAL-->
@@ -28,18 +28,26 @@
 <body>
   <!-- HEADER-->
   <header>
-    <h1>María Eugenia Costa</h1>
+    <h1>Experiencia</h1>
   </header>
   <!-- MAIN -->
   <main>
-    <h2>Bienvenidos a mi portafolio</h2>
-    <p>Gracias por interesarte en mi.</p>
-    <p>👇🏼 elegí que ver 👀</p>
-    <ul class="opciones">
-      <li><a href="./conocimientos.html" class="btn-ir">Conocimientos</a></li>
-      <li><a href="./experiencia.html" class="btn-ir">Experiencia</a></li>
-      <li><a href="./contacto.html" class="btn-ir">Contacto</a></li>
-    </ul>
+    <section class="experiencia1">
+      <h3>Hogarth Argentina</h3>
+      <p>(Enero 2022 - Actualidad)</p>
+      <p>Desarrolladora Front End con <i>HTML5</i>, <i>CSS3</i> y <i>JavaScript</i></p>
+    </section>
+    <section class="experiencia2">
+      <h3>Pigmalion</h3>
+      <p>(Agosto 2021 - Enero 2022)</p>
+      <p>Desarrolladora Back End con <i>Java</i></p>
+    </section>
+    <section class="experiencia3">
+      <h3>Consult-ar</h3>
+      <p>(Marzo 2021 - Enero 2022)</p>
+      <p>Desarrolladora Front End</p>
+    </section>
+    <a href="./portfolio.html" class="btn-ir">Volver atras</a>
   </main>
   <footer>
     <p>Practica realizada por <a href="http://www.linkedin.com/in/maríaeugeniacosta" target="_blank" rel="noopener noreferrer">María Eugenia Costa</a> para el curso <strong>Introduccion Front End</strong> en <img src="../assets/images/ada_logo_blanco.png" alt="Logo de Ada"></p>
