--- a/clase02/temario.html
+++ b/clase02/temario.html
@@ -55,7 +55,7 @@
       <p>Los elementos HTML le dicen al navegador cómo mostrar el contenido</p>
       <p></p>
       <p>Los elementos HTML etiquetan piezas de contenido como "este es un encabezado", "este es un párrafo", "este es un enlace", etc.</p>
-      <a href="#presentacion" class="btn"><img src="https://img.icons8.com/color/24/000000/up-squared.png" alt="flecha hacia arriba" />Volver arriba</a>
+      <a href="#presentacion" class="btn"><img src="https://img.icons8.com/color/24/000000/up-squared.png" width="32" height="24" alt="flecha hacia arriba" />Volver arriba</a>
     </section>
     <section id="css">
       <h2>Introducción a CSS</h2>
@@ -64,20 +64,20 @@
       <p>CSS describe cómo se deben mostrar los elementos HTML en la pantalla, el papel o en otros medios</p>
       <p>CSS ahorra mucho trabajo. Puede controlar el diseño de varias páginas web a la vez</p>
       <p>Las hojas de estilo externas se almacenan en archivos CSS</p>
-      <a href="#presentacion" class="btn"><img src="https://img.icons8.com/color/24/000000/up-squared.png"  alt="flecha hacia arriba"/>Volver arriba</a>
+      <a href="#presentacion" class="btn"><img src="https://img.icons8.com/color/24/000000/up-squared.png" width="32" height="24" alt="flecha hacia arriba"/>Volver arriba</a>
     </section>
     <section id="sass">
       <h2>Introducción a Sass</h2>
       <h3>CSS con superpoderes</h3>
       <p>Sass es el lenguaje de extensión CSS de grado profesional más maduro, estable y potente del mundo.</p>
-      <a href="#presentacion" class="btn"><img src="https://img.icons8.com/color/24/000000/up-squared.png"  alt="flecha hacia arriba"/>Volver arriba</a>
+      <a href="#presentacion" class="btn"><img src="https://img.icons8.com/color/24/000000/up-squared.png" width="32" height="24" alt="flecha hacia arriba"/>Volver arriba</a>
     </section>
     <section id="javascript">
       <h2>Introducción a JavaScript</h2>
       <p>JavaScript es el lenguaje de programación más popular del mundo.</p>
       <p>JavaScript es el lenguaje de programación de la Web.</p>
       <p>JavaScript es fácil de aprender.</p>
-      <a href="#presentacion" class="btn"><img src="https://img.icons8.com/color/24/000000/up-squared.png"  alt="flecha hacia arriba"/>Volver arriba</a>
+      <a href="#presentacion" class="btn"><img src="https://img.icons8.com/color/24/000000/up-squared.png" width="32" height="24" alt="flecha hacia arriba"/>Volver arriba</a>
     </section>
     <section id="react">
       <h2>Introducción a React</h2>
@@ -90,11 +90,9 @@
       <h3>Aprenda una vez, escriba en cualquier lugar</h3>
       <p>No hacemos suposiciones sobre el resto de su pila de tecnología, por lo que puede desarrollar nuevas funciones en React sin tener que volver a escribir el código existente.</p>
       <p>React también puede renderizar en el servidor usando Node y potenciar aplicaciones móviles usando React Native.</p>
-      <a href="#presentacion" class="btn"><img src="https://img.icons8.com/color/24/000000/up-squared.png"  alt="flecha hacia arriba"/>Volver arriba</a>
+      <a href="#presentacion" class="btn"><img src="https://img.icons8.com/color/24/000000/up-squared.png" width="32" height="24" alt="flecha hacia arriba"/>Volver arriba</a>
     </section>
-
   </main>
-
   <footer>
     <p>Practica realizada por <a href="http://www.linkedin.com/in/maríaeugeniacosta" target="_blank" rel="noopener noreferrer">María Eugenia Costa</a> para el curso <strong>Introduccion Front End</strong> en <img src="../assets/images/ada_logo_blanco.png" alt="Logo de Ada"></p>
   </footer>
