agrego la practica del portafolio

--- a/clase02/blog_con_imagenes.html
+++ b/clase02/blog_con_imagenes.html
@@ -15,22 +15,46 @@
   <meta property="og:description" name="twitter:description"
     content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la segunda clase, en este caso un blog con imagenes.">
   <meta property="og:image" name="twitter:image"
-    content="https://img.icons8.com/ios/50/000000/laptop-coding.png">
+    content="https://img.icons8.com/cute-clipart/64/000000/dog.png">
   <meta property="og:url" name="twitter:url"
     content="https://eugenia1984.github.io/ada-introduccion-frontend/clase02/blog-con-imagenes.html">
   <!-- FAVICON -->
-  <link rel="shortcut icon" href="https://img.icons8.com/ios/50/000000/laptop-coding.png" type="image/x-icon">
+  <link rel="shortcut icon" href="https://img.icons8.com/cute-clipart/64/000000/dog.png" type="image/x-icon">
   <!-- CSS GENERAL-->
   <link rel="stylesheet" href="../styles/main.css">
+  <!--CSS BLOG CON IMAGENES-->
+  <link rel="stylesheet" href="../styles/blog-con-imagenes.css">
 </head>
 <body>
   <!-- HEADER-->
   <header>
-    <h1>Blog con imagenes</h1>
+    <h1>Mascotas</h1>
   </header>
   <!-- MAIN -->
   <main>
-
+    <section class="introduccion">
+      <p>Abajo enontrarán algunos ejemplos de mascotas.</p>
+    </section>
+    <section class="perros">
+      <h2>Perros</h2>
+      <p>Siempre prioriza <strong>adoptar</strong> a comprar, no incentivemos los criaderos. Seguramente hay un 🐶 esperando, y si es un adulto el que eligen van a tener mucho ❤</p>
+      <img src="https://img.freepik.com/free-photo/cute-gray-havanese-dog-laying_181624-35682.jpg?w=740&t=st=1653111979~exp=1653112579~hmac=27e7220d74aa3e0c39f1c5b478117de7fa3e06b15e752ed6055fba5ba9ad71ba" alt="perro">
+      <p>Son los compañeros ideales para hacer <i>homme office</i>.</p>
+      <img src="https://img.freepik.com/free-photo/cute-little-dog-impersonating-business-person_23-2148985938.jpg?w=740&t=st=1653112111~exp=1653112711~hmac=9fe15f2500473bb161f08b2d4f8bff7a7d23168ab7a37c4604e480a44305ffef" alt="perro con computadora">
+      <p>Y recorda que no son juguetes, si adoptas a cachorros vas a tener que dedicarle tiempo para educarlo.</p>
+    </section>
+    <section class="gatos">
+      <h2>Gatos</h2>
+      <p>Hay quienes son del <i>team</i> gatuno.</p>
+      <img src="https://img.freepik.com/free-photo/white-cat-lies-woman-s-knees_8353-539.jpg?w=740&t=st=1653112556~exp=1653113156~hmac=032ee4f3829a6bc0da8453270cd88110cb70282d48bf417a34028d90ce40fd71" alt="gato en regazo">
+      <p>Y se divierten con sus travesuras</p>
+      <img src="https://img.freepik.com/free-photo/beautiful-pet-portrait-cat_23-2149218468.jpg?w=826&t=st=1653112553~exp=1653113153~hmac=14e56df60ff270042c7ba7c627d43373dab206d506b72ecb9a39c7f59c6cad12" alt="gato dentro de canasto de mimbre">
+    </section>
+    <section class="hamsters">
+      <h2>Hamsters</h2>
+      <p>Si viven en un departamento con pocos metros cuadrados es una buena opcion.</p>
+      <img src="https://img.freepik.com/free-photo/close-up-view-cute-little-girl-holding-hamster_23-2148637697.jpg?t=st=1653112363~exp=1653112963~hmac=1fce2a9bd4bdc7a0b9a32021349bc489d421ca28d19c71d313e97e1a456a074d&w=740" alt="niña con un hamster en la mano">
+    </section>
   </main>
 
   <footer>
