--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- FAVICON -->
   <link rel="shortcut icon" href="https://img.icons8.com/external-becris-lineal-color-becris/64/000000/external-programming-data-science-becris-lineal-color-becris.png" type="image/x-icon">
   <!-- CSS GENERAL-->
-  <link rel="stylesheet" href="../styles/main.css">
+  <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
   <!-- HEADER -->
